--- a/index.html
+++ b/index.html
@@ -89,14 +89,18 @@
                 <div class="row-specs-title align-self-md-start">
                     <h1 class="display-3">SPECIFICATIES</h1>
                 </div>
-                <div class="col-6 position-relative d-flex align-items-center justify-content-center row-specs-content flex-column p-md-5 m-md-5">
+                <div class="col-12 row-specs-content flex-column">
                     <div class="d-flex justify-content-center">
-                        <img class="img img-fluid" src="./Images/BandRoodPingGroen.png" alt="Rode Band">
+                        <img class="img img-fluid w-100" src="./Images/roooooood.png" alt="Rode Band">
+                        <img class="img img-fluid w-100 een" src="./Images/Mechanisme.png" alt="Rode Band">
+                        <img class="img img-fluid w-100 twee" src="./Images/Noodknop.png" alt="Rode Band">
+                        <img class="img img-fluid w-100 drie" src="./Images/LED.png" alt="Rode Band">
+                        <img class="img img-fluid w-100 vier" src="./Images/speaker.png" alt="Rode Band">
                     </div>
-                    <img class="position-absolute cloud1" src="./images/cloud1.png" alt="cloud1">
-                    <img class="position-absolute cloud2" src="./images/cloud2.png" alt="cloud2">
-                    <div>  
-                        <button class="btn btn-info custom-button mt-5">Meer info</button>
+                        <img class="position-absolute cloud1" src="./images/cloud1.png" alt="cloud1">
+                        <img class="position-absolute cloud2" src="./images/cloud2.png" alt="cloud2">
+                    <div class="button-c">  
+                        <button class="btn btn-info custom-button">Meer info</button>
                     </div>
                 </div>
             </div>
