--- a/logIn.html
+++ b/logIn.html
@@ -93,15 +93,15 @@
                         </div>
                         <div class="col-md-6 registreer-naam pt-4">
                             <label class="invalidtxt" for="exampleInputPassword1">Naam*</label>
-                            <input type="text" class="form-control invalid" id="naamuser">
+                            <input type="text" class="form-control" id="naamuser">
                         </div>
                         <div class="col-md-6 registreer-email pt-4">
                             <label class="invalidtxt" for="exampleInputPassword1">Email*</label>
-                            <input type="text" class="form-control invalid" id="mailuser">
+                            <input type="text" class="form-control" id="mailuser">
                         </div>
                         <div class="col-md-6 registreer-wachtwoord pt-4">
                             <label class="invalidtxt" for="exampleInputPassword1">Wachtwoord*</label>
-                            <input type="password" class="form-control invalid" id="wachtwoorduser">
+                            <input type="password" class="form-control" id="wachtwoorduser">
                         </div>
                         <div class="col-md-6 registreer-telefoon pt-4">
                             <label for="exampleInputPassword1">Telefoon</label>
