--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
             </div>
             <div class="row flex-column row-specs align-items-center px-3 pt-4">
                 <div class="row-specs-title align-self-md-start">
-                    <h1 class="display-3">SPECIFICATIES</h1>
+                    <h1 class="display-3 mb-5 mb-lg-0">SPECIFICATIES</h1>
                 </div>
                 <div class="col-12 row-specs-content flex-column">
-                    <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center" id="imagesanimation">
                         <img class="img img-fluid w-100" src="./Images/roooooood.png" alt="Rode Band">
                         <img class="img img-fluid w-100 een" src="./Images/Mechanisme.png" alt="Rode Band">
                         <img class="img img-fluid w-100 twee" src="./Images/Noodknop.png" alt="Rode Band">
