--- a/product.html
+++ b/product.html
@@ -42,7 +42,7 @@
   <!--MAIN-->
   <main class="container">
         <div class="row row-specs">
-          <div class="col-6 .col-md-4 linkerkolom">
+          <div class="col-md-4 linkerkolom">
             <div class="titel-spec">
               <h1 class="display-3 specificaties">SPECIFICATIES</h1>
             </div>
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="col-md-8 rechterkolom">
-            <div  class="position-absolute cloud5">
+            <div  class="position-absolute cloud6">
               <svg xmlns="http://www.w3.org/2000/svg" width="332.794" height="180.127" viewBox="0 0 332.794 180.127">
                 <g id="cloud" transform="translate(-213.584 -583.079)">
                   <g id="Group_88" data-name="Group 88" transform="translate(213.584 684.57)">
@@ -125,7 +125,7 @@
                 </g>
               </svg>
             </div>
-            <div  class="position-absolute cloud6">
+            <div  class="position-absolute cloud7">
               <svg xmlns="http://www.w3.org/2000/svg" width="735.161" height="397.911" viewBox="0 0 735.161 397.911">
                 <g id="cloud" transform="translate(-213.584 -583.079)">
                   <g id="Group_88" data-name="Group 88" transform="translate(213.584 807.278)">
@@ -195,6 +195,68 @@
         <div class="titel-tecs">
           <h1 class="display-3 text-center test2">Technische details</h1>
         </div>
+        <div class="position-absolute cloud5">
+          <svg xmlns="http://www.w3.org/2000/svg" width="332.794" height="180.127" viewBox="0 0 332.794 180.127">
+            <g id="cloud" transform="translate(-213.584 -583.079)">
+              <g id="Group_88" data-name="Group 88" transform="translate(213.584 684.57)">
+                <circle id="Ellipse_73" data-name="Ellipse 73" cx="39.318" cy="39.318" r="39.318" fill="#fff"/>
+                <circle id="Ellipse_74" data-name="Ellipse 74" cx="39.318" cy="39.318" r="39.318" transform="translate(4.044)" fill="#fff"/>
+                <circle id="Ellipse_75" data-name="Ellipse 75" cx="39.318" cy="39.318" r="39.318" transform="translate(8.089)" fill="#fff"/>
+                <circle id="Ellipse_76" data-name="Ellipse 76" cx="39.318" cy="39.318" r="39.318" transform="translate(12.133)" fill="#fff"/>
+                <circle id="Ellipse_77" data-name="Ellipse 77" cx="39.318" cy="39.318" r="39.318" transform="translate(16.178)" fill="#fff"/>
+                <circle id="Ellipse_78" data-name="Ellipse 78" cx="39.318" cy="39.318" r="39.318" transform="translate(20.222)" fill="#fff"/>
+                <circle id="Ellipse_79" data-name="Ellipse 79" cx="39.318" cy="39.318" r="39.318" transform="translate(24.266)" fill="#fff"/>
+                <circle id="Ellipse_80" data-name="Ellipse 80" cx="39.318" cy="39.318" r="39.318" transform="translate(28.311)" fill="#fff"/>
+                <circle id="Ellipse_81" data-name="Ellipse 81" cx="39.318" cy="39.318" r="39.318" transform="translate(32.355)" fill="#fff"/>
+                <circle id="Ellipse_82" data-name="Ellipse 82" cx="39.318" cy="39.318" r="39.318" transform="translate(36.4)" fill="#fff"/>
+                <circle id="Ellipse_83" data-name="Ellipse 83" cx="39.318" cy="39.318" r="39.318" transform="translate(40.444)" fill="#fff"/>
+                <circle id="Ellipse_84" data-name="Ellipse 84" cx="39.318" cy="39.318" r="39.318" transform="translate(44.488)" fill="#fff"/>
+                <circle id="Ellipse_85" data-name="Ellipse 85" cx="39.318" cy="39.318" r="39.318" transform="translate(48.533)" fill="#fff"/>
+                <circle id="Ellipse_86" data-name="Ellipse 86" cx="39.318" cy="39.318" r="39.318" transform="translate(52.577)" fill="#fff"/>
+                <circle id="Ellipse_87" data-name="Ellipse 87" cx="39.318" cy="39.318" r="39.318" transform="translate(56.622)" fill="#fff"/>
+                <circle id="Ellipse_88" data-name="Ellipse 88" cx="39.318" cy="39.318" r="39.318" transform="translate(60.666)" fill="#fff"/>
+                <circle id="Ellipse_89" data-name="Ellipse 89" cx="39.318" cy="39.318" r="39.318" transform="translate(64.71)" fill="#fff"/>
+                <circle id="Ellipse_90" data-name="Ellipse 90" cx="39.318" cy="39.318" r="39.318" transform="translate(68.755)" fill="#fff"/>
+                <circle id="Ellipse_91" data-name="Ellipse 91" cx="39.318" cy="39.318" r="39.318" transform="translate(72.799)" fill="#fff"/>
+                <circle id="Ellipse_92" data-name="Ellipse 92" cx="39.318" cy="39.318" r="39.318" transform="translate(76.844)" fill="#fff"/>
+                <circle id="Ellipse_93" data-name="Ellipse 93" cx="39.318" cy="39.318" r="39.318" transform="translate(80.888)" fill="#fff"/>
+                <circle id="Ellipse_94" data-name="Ellipse 94" cx="39.318" cy="39.318" r="39.318" transform="translate(84.932)" fill="#fff"/>
+                <circle id="Ellipse_95" data-name="Ellipse 95" cx="39.318" cy="39.318" r="39.318" transform="translate(88.977)" fill="#fff"/>
+                <circle id="Ellipse_96" data-name="Ellipse 96" cx="39.318" cy="39.318" r="39.318" transform="translate(93.021)" fill="#fff"/>
+                <circle id="Ellipse_97" data-name="Ellipse 97" cx="39.318" cy="39.318" r="39.318" transform="translate(97.066)" fill="#fff"/>
+                <circle id="Ellipse_98" data-name="Ellipse 98" cx="39.318" cy="39.318" r="39.318" transform="translate(101.11)" fill="#fff"/>
+                <circle id="Ellipse_99" data-name="Ellipse 99" cx="39.318" cy="39.318" r="39.318" transform="translate(105.154)" fill="#fff"/>
+                <circle id="Ellipse_100" data-name="Ellipse 100" cx="39.318" cy="39.318" r="39.318" transform="translate(109.199)" fill="#fff"/>
+                <circle id="Ellipse_101" data-name="Ellipse 101" cx="39.318" cy="39.318" r="39.318" transform="translate(113.243)" fill="#fff"/>
+                <circle id="Ellipse_102" data-name="Ellipse 102" cx="39.318" cy="39.318" r="39.318" transform="translate(117.288)" fill="#fff"/>
+                <circle id="Ellipse_103" data-name="Ellipse 103" cx="39.318" cy="39.318" r="39.318" transform="translate(121.332)" fill="#fff"/>
+                <circle id="Ellipse_104" data-name="Ellipse 104" cx="39.318" cy="39.318" r="39.318" transform="translate(125.376)" fill="#fff"/>
+                <circle id="Ellipse_105" data-name="Ellipse 105" cx="39.318" cy="39.318" r="39.318" transform="translate(129.421)" fill="#fff"/>
+                <circle id="Ellipse_106" data-name="Ellipse 106" cx="39.318" cy="39.318" r="39.318" transform="translate(133.465)" fill="#fff"/>
+                <circle id="Ellipse_107" data-name="Ellipse 107" cx="39.318" cy="39.318" r="39.318" transform="translate(137.51)" fill="#fff"/>
+                <circle id="Ellipse_108" data-name="Ellipse 108" cx="39.318" cy="39.318" r="39.318" transform="translate(141.554)" fill="#fff"/>
+                <circle id="Ellipse_109" data-name="Ellipse 109" cx="39.318" cy="39.318" r="39.318" transform="translate(145.598)" fill="#fff"/>
+                <circle id="Ellipse_110" data-name="Ellipse 110" cx="39.318" cy="39.318" r="39.318" transform="translate(149.643)" fill="#fff"/>
+                <circle id="Ellipse_111" data-name="Ellipse 111" cx="39.318" cy="39.318" r="39.318" transform="translate(153.687)" fill="#fff"/>
+                <circle id="Ellipse_112" data-name="Ellipse 112" cx="39.318" cy="39.318" r="39.318" transform="translate(157.732)" fill="#fff"/>
+                <circle id="Ellipse_113" data-name="Ellipse 113" cx="39.318" cy="39.318" r="39.318" transform="translate(161.776)" fill="#fff"/>
+                <circle id="Ellipse_114" data-name="Ellipse 114" cx="39.318" cy="39.318" r="39.318" transform="translate(165.82)" fill="#fff"/>
+                <circle id="Ellipse_115" data-name="Ellipse 115" cx="39.318" cy="39.318" r="39.318" transform="translate(169.865)" fill="#fff"/>
+                <circle id="Ellipse_116" data-name="Ellipse 116" cx="39.318" cy="39.318" r="39.318" transform="translate(173.909)" fill="#fff"/>
+                <circle id="Ellipse_117" data-name="Ellipse 117" cx="39.318" cy="39.318" r="39.318" transform="translate(177.954)" fill="#fff"/>
+                <circle id="Ellipse_118" data-name="Ellipse 118" cx="39.318" cy="39.318" r="39.318" transform="translate(181.998)" fill="#fff"/>
+                <circle id="Ellipse_119" data-name="Ellipse 119" cx="39.318" cy="39.318" r="39.318" transform="translate(186.042)" fill="#fff"/>
+                <circle id="Ellipse_120" data-name="Ellipse 120" cx="39.318" cy="39.318" r="39.318" transform="translate(190.087)" fill="#fff"/>
+                <circle id="Ellipse_121" data-name="Ellipse 121" cx="39.318" cy="39.318" r="39.318" transform="translate(194.131)" fill="#fff"/>
+                <circle id="Ellipse_122" data-name="Ellipse 122" cx="39.318" cy="39.318" r="39.318" transform="translate(198.176)" fill="#fff"/>
+                <circle id="Ellipse_123" data-name="Ellipse 123" cx="39.318" cy="39.318" r="39.318" transform="translate(202.22)" fill="#fff"/>
+                <circle id="Ellipse_124" data-name="Ellipse 124" cx="39.318" cy="39.318" r="39.318" transform="translate(206.264)" fill="#fff"/>
+              </g>
+              <circle id="Ellipse_125" data-name="Ellipse 125" cx="90.064" cy="90.064" r="90.064" transform="translate(366.251 583.079)" fill="#fff"/>
+              <circle id="Ellipse_126" data-name="Ellipse 126" cx="74.658" cy="74.658" r="74.658" transform="translate(257.427 613.891)" fill="#fff"/>
+            </g>
+          </svg>
+        </div>
         <div class="row row-tecs">
           <div class="row align-items-center">
             <div class="col-sm-4">
@@ -213,68 +275,6 @@
                 <br>Het heeft een gangreserve van 5 dagen. Wanneer het horloge stil ligt blijft het nog 5 dagen doorlopen.</div>
             </div>
           </div>
-      </div>
-<div class="position-absolute cloud5">
-        <svg xmlns="http://www.w3.org/2000/svg" width="332.794" height="180.127" viewBox="0 0 332.794 180.127">
-          <g id="cloud" transform="translate(-213.584 -583.079)">
-            <g id="Group_88" data-name="Group 88" transform="translate(213.584 684.57)">
-              <circle id="Ellipse_73" data-name="Ellipse 73" cx="39.318" cy="39.318" r="39.318" fill="#fff"/>
-              <circle id="Ellipse_74" data-name="Ellipse 74" cx="39.318" cy="39.318" r="39.318" transform="translate(4.044)" fill="#fff"/>
-              <circle id="Ellipse_75" data-name="Ellipse 75" cx="39.318" cy="39.318" r="39.318" transform="translate(8.089)" fill="#fff"/>
-              <circle id="Ellipse_76" data-name="Ellipse 76" cx="39.318" cy="39.318" r="39.318" transform="translate(12.133)" fill="#fff"/>
-              <circle id="Ellipse_77" data-name="Ellipse 77" cx="39.318" cy="39.318" r="39.318" transform="translate(16.178)" fill="#fff"/>
-              <circle id="Ellipse_78" data-name="Ellipse 78" cx="39.318" cy="39.318" r="39.318" transform="translate(20.222)" fill="#fff"/>
-              <circle id="Ellipse_79" data-name="Ellipse 79" cx="39.318" cy="39.318" r="39.318" transform="translate(24.266)" fill="#fff"/>
-              <circle id="Ellipse_80" data-name="Ellipse 80" cx="39.318" cy="39.318" r="39.318" transform="translate(28.311)" fill="#fff"/>
-              <circle id="Ellipse_81" data-name="Ellipse 81" cx="39.318" cy="39.318" r="39.318" transform="translate(32.355)" fill="#fff"/>
-              <circle id="Ellipse_82" data-name="Ellipse 82" cx="39.318" cy="39.318" r="39.318" transform="translate(36.4)" fill="#fff"/>
-              <circle id="Ellipse_83" data-name="Ellipse 83" cx="39.318" cy="39.318" r="39.318" transform="translate(40.444)" fill="#fff"/>
-              <circle id="Ellipse_84" data-name="Ellipse 84" cx="39.318" cy="39.318" r="39.318" transform="translate(44.488)" fill="#fff"/>
-              <circle id="Ellipse_85" data-name="Ellipse 85" cx="39.318" cy="39.318" r="39.318" transform="translate(48.533)" fill="#fff"/>
-              <circle id="Ellipse_86" data-name="Ellipse 86" cx="39.318" cy="39.318" r="39.318" transform="translate(52.577)" fill="#fff"/>
-              <circle id="Ellipse_87" data-name="Ellipse 87" cx="39.318" cy="39.318" r="39.318" transform="translate(56.622)" fill="#fff"/>
-              <circle id="Ellipse_88" data-name="Ellipse 88" cx="39.318" cy="39.318" r="39.318" transform="translate(60.666)" fill="#fff"/>
-              <circle id="Ellipse_89" data-name="Ellipse 89" cx="39.318" cy="39.318" r="39.318" transform="translate(64.71)" fill="#fff"/>
-              <circle id="Ellipse_90" data-name="Ellipse 90" cx="39.318" cy="39.318" r="39.318" transform="translate(68.755)" fill="#fff"/>
-              <circle id="Ellipse_91" data-name="Ellipse 91" cx="39.318" cy="39.318" r="39.318" transform="translate(72.799)" fill="#fff"/>
-              <circle id="Ellipse_92" data-name="Ellipse 92" cx="39.318" cy="39.318" r="39.318" transform="translate(76.844)" fill="#fff"/>
-              <circle id="Ellipse_93" data-name="Ellipse 93" cx="39.318" cy="39.318" r="39.318" transform="translate(80.888)" fill="#fff"/>
-              <circle id="Ellipse_94" data-name="Ellipse 94" cx="39.318" cy="39.318" r="39.318" transform="translate(84.932)" fill="#fff"/>
-              <circle id="Ellipse_95" data-name="Ellipse 95" cx="39.318" cy="39.318" r="39.318" transform="translate(88.977)" fill="#fff"/>
-              <circle id="Ellipse_96" data-name="Ellipse 96" cx="39.318" cy="39.318" r="39.318" transform="translate(93.021)" fill="#fff"/>
-              <circle id="Ellipse_97" data-name="Ellipse 97" cx="39.318" cy="39.318" r="39.318" transform="translate(97.066)" fill="#fff"/>
-              <circle id="Ellipse_98" data-name="Ellipse 98" cx="39.318" cy="39.318" r="39.318" transform="translate(101.11)" fill="#fff"/>
-              <circle id="Ellipse_99" data-name="Ellipse 99" cx="39.318" cy="39.318" r="39.318" transform="translate(105.154)" fill="#fff"/>
-              <circle id="Ellipse_100" data-name="Ellipse 100" cx="39.318" cy="39.318" r="39.318" transform="translate(109.199)" fill="#fff"/>
-              <circle id="Ellipse_101" data-name="Ellipse 101" cx="39.318" cy="39.318" r="39.318" transform="translate(113.243)" fill="#fff"/>
-              <circle id="Ellipse_102" data-name="Ellipse 102" cx="39.318" cy="39.318" r="39.318" transform="translate(117.288)" fill="#fff"/>
-              <circle id="Ellipse_103" data-name="Ellipse 103" cx="39.318" cy="39.318" r="39.318" transform="translate(121.332)" fill="#fff"/>
-              <circle id="Ellipse_104" data-name="Ellipse 104" cx="39.318" cy="39.318" r="39.318" transform="translate(125.376)" fill="#fff"/>
-              <circle id="Ellipse_105" data-name="Ellipse 105" cx="39.318" cy="39.318" r="39.318" transform="translate(129.421)" fill="#fff"/>
-              <circle id="Ellipse_106" data-name="Ellipse 106" cx="39.318" cy="39.318" r="39.318" transform="translate(133.465)" fill="#fff"/>
-              <circle id="Ellipse_107" data-name="Ellipse 107" cx="39.318" cy="39.318" r="39.318" transform="translate(137.51)" fill="#fff"/>
-              <circle id="Ellipse_108" data-name="Ellipse 108" cx="39.318" cy="39.318" r="39.318" transform="translate(141.554)" fill="#fff"/>
-              <circle id="Ellipse_109" data-name="Ellipse 109" cx="39.318" cy="39.318" r="39.318" transform="translate(145.598)" fill="#fff"/>
-              <circle id="Ellipse_110" data-name="Ellipse 110" cx="39.318" cy="39.318" r="39.318" transform="translate(149.643)" fill="#fff"/>
-              <circle id="Ellipse_111" data-name="Ellipse 111" cx="39.318" cy="39.318" r="39.318" transform="translate(153.687)" fill="#fff"/>
-              <circle id="Ellipse_112" data-name="Ellipse 112" cx="39.318" cy="39.318" r="39.318" transform="translate(157.732)" fill="#fff"/>
-              <circle id="Ellipse_113" data-name="Ellipse 113" cx="39.318" cy="39.318" r="39.318" transform="translate(161.776)" fill="#fff"/>
-              <circle id="Ellipse_114" data-name="Ellipse 114" cx="39.318" cy="39.318" r="39.318" transform="translate(165.82)" fill="#fff"/>
-              <circle id="Ellipse_115" data-name="Ellipse 115" cx="39.318" cy="39.318" r="39.318" transform="translate(169.865)" fill="#fff"/>
-              <circle id="Ellipse_116" data-name="Ellipse 116" cx="39.318" cy="39.318" r="39.318" transform="translate(173.909)" fill="#fff"/>
-              <circle id="Ellipse_117" data-name="Ellipse 117" cx="39.318" cy="39.318" r="39.318" transform="translate(177.954)" fill="#fff"/>
-              <circle id="Ellipse_118" data-name="Ellipse 118" cx="39.318" cy="39.318" r="39.318" transform="translate(181.998)" fill="#fff"/>
-              <circle id="Ellipse_119" data-name="Ellipse 119" cx="39.318" cy="39.318" r="39.318" transform="translate(186.042)" fill="#fff"/>
-              <circle id="Ellipse_120" data-name="Ellipse 120" cx="39.318" cy="39.318" r="39.318" transform="translate(190.087)" fill="#fff"/>
-              <circle id="Ellipse_121" data-name="Ellipse 121" cx="39.318" cy="39.318" r="39.318" transform="translate(194.131)" fill="#fff"/>
-              <circle id="Ellipse_122" data-name="Ellipse 122" cx="39.318" cy="39.318" r="39.318" transform="translate(198.176)" fill="#fff"/>
-              <circle id="Ellipse_123" data-name="Ellipse 123" cx="39.318" cy="39.318" r="39.318" transform="translate(202.22)" fill="#fff"/>
-              <circle id="Ellipse_124" data-name="Ellipse 124" cx="39.318" cy="39.318" r="39.318" transform="translate(206.264)" fill="#fff"/>
-            </g>
-            <circle id="Ellipse_125" data-name="Ellipse 125" cx="90.064" cy="90.064" r="90.064" transform="translate(366.251 583.079)" fill="#fff"/>
-            <circle id="Ellipse_126" data-name="Ellipse 126" cx="74.658" cy="74.658" r="74.658" transform="translate(257.427 613.891)" fill="#fff"/>
-          </g>
-        </svg>
       </div>
   </main>
 </div>
