--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
                 </div>
             </div>
             <div class="row row-myping mb-5">
-                <div class="col-md-6 d-flex align-items-end row-myping-mockup order-1 order-md-0">
+                <div class="col-md-6 d-flex align-items-end row-myping-mockup order-md-0 order-1">
                     <img class="img-fluid mockup1 pb-5 mb-5" src="./Images/mockup_1.png">
                     <img class="img-fluid mockup2 pb-5 mb-5" src="./Images/mockup_2.png">
                 </div>
-                <div class="col-md-5 position-relative offset-1 row-myping-info pb-5 ">
-                    <img class="position-absolute cloud3 d-sm-block d-none" src="./images/cloud3.png" alt="cloud3">
+                <div class="col-md-5 position-relative offset-sm-1 row-myping-info pb-5 ">
                     <div class="row-myping-info-box pb-5 mb-5">
                         <div>
                             <h1 class="display-3 my-3 pt-5">MYPINGWING</h1>
@@ -143,11 +142,11 @@
                 </div>
                 <img class="position-absolute cloud4" src="./images/cloud4.png" alt="cloud4">
                 <div class="row row-overping-tekstblokken py-5 px-4 mt-5">
-                    <div class="col-md-4 team-focus-missie mb-4">
+                    <div class="col-md-4 team-focus-missie team mb-4">
                         <h4 class="mb-2">Team</h4>
                         <p>Een gedisciplineerd team van 5 studenten dat streeft naar een veilig gevoel voor kinderen en een geruststellend gevoel voor ouders.</p>
                     </div>
-                    <div class="col-md-4 team-focus-missie mb-4">
+                    <div class="col-md-4 team-focus-missie focus mb-4">
                         <h4 class="mb-2">Focus</h4>
                         <p>Wij bij 'PingWing' focussen op het 
                            gebruiksgemak van onze armband, 
@@ -156,12 +155,12 @@
                            duidelijke signalen naar het kind door 
                            middel van geluid- en lichtsignalen.</p>
                     </div>
-                    <div class="col-md-4 team-focus-missie px-sm-4 mb-4"> 
+                    <div class="col-md-4 team-focus-missie missie px-sm-4 mb-4"> 
                         <h4 class="mb-2">Onze missie</h4>
                         <p>Wij gaan ervoor om ouders een veilig gevoel te geven en kinderen gerust te stellen in hun omgeving.</p>
                     </div>
                 </div>
-                <div class="row row-overping-info pt-5 ml-4">
+                <div class="row row-overping-info pl-4 pt-5">
                     <button class="btn btn-info custom-button">Meer info</button>
                 </div>
             </div>
